formver.compiler-plugin/testData/diagnostics/conversion/control_flow/recursion.kt
// CONVERSION_ONLY

fun <!VIPER_TEXT!>recursive<!>(): Unit = recursive()